--- a/common_connector_library/static/description/index.html
+++ b/common_connector_library/static/description/index.html
@@ -49,10 +49,9 @@
 -->
 
 
-<section class="container mt32">
-   <h2 style="color: #091E42;font-family: &quot;Montserrat&quot;;text-align: center;margin: 25px auto;text-transform: uppercase;" class="oe_slogan">
-                                       <b>Suggested Products</b>
-                                       </h2>
+<section class="oe_container"><h2 style="color: #091E42;font-family: &quot;Montserrat&quot;;text-align: center;margin: 25px auto;text-transform: uppercase;" class="oe_slogan">
+         <b>Suggested Products</b>
+      </h2>
 
 <div id="demo" class="row carousel slide mt64 mb32" data-ride="carousel">
    <!-- The slideshow -->
@@ -84,7 +83,7 @@
          <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="
             float: left;
             ">
-            <a href="https://apps.odoo.com/apps/modules/13.0/woo_commerce_ept/" target="_blank">
+            <a href="https://apps.odoo.com/apps/modules/12.0/woo_commerce_ept/" target="_blank">
                <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
                   <img class="img img-responsive center-block" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Odoo-WooCommerce-Connector.jpg">
                   <h4 class="mt0" style="padding:6% 4%;text-align: center;white-space: nowrap;width: 100%;overflow: hidden;text-overflow: ellipsis;font-family: Roboto-medium;">
@@ -110,7 +109,7 @@
          <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="
             float: left;
             ">
-            <a href="https://apps.odoo.com/apps/modules/13.0/shopify_ept/" target="_blank">
+            <a href="https://apps.odoo.com/apps/modules/12.0/shopify_ept/" target="_blank">
                <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
                   <img class="img img-responsive center-block" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Shopify-Odoo-Connector.jpg">
                   <h4 class="mt0" style="padding:6% 4%;text-align: center;white-space: nowrap;width: 100%;overflow: hidden;text-overflow: ellipsis;font-family: Roboto-medium;">
@@ -119,18 +118,18 @@
                </div>
             </a>
          </div>
-         <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="
-            float: left;
-            ">
-            <a href="https://apps.odoo.com/apps/modules/12.0/ups_shipping_ept/" target="_blank">
-               <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
-                  <img class="img img-responsive center-block" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="UPS---Odoo-Connector.jpg">
-                  <h4 class="mt0" style="padding:6% 4%;text-align: center;white-space: nowrap;width: 100%;overflow: hidden;text-overflow: ellipsis;font-family: Roboto-medium;">
-                     UPS Odoo Shipping Connector
-                  </h4>
-               </div>
-            </a>
-         </div>
+         <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="float: left;">
+                                                       <a href="https://www.odoo.com/apps/modules/12.0/amazon_ept/" target="_blank">
+                                                           <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
+                                                               <img class="img img-responsive center-block"
+                                                                     style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                                                     src="Amazon-Odoo-Connector.jpg"/>
+                                                               <h4 class="mt0" style="padding:6&#37; 4&#37;;text-align: center;white-space: nowrap;width: 100&#37;;overflow: hidden;text-overflow: ellipsis;font-family: Roboto-medium;">
+                                                                    Amazon Odoo Connector
+                                                               </h4>
+                                                           </div>
+                                                       </a>
+                                                   </div>
       </div>
       <div class="carousel-item">
          <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="
@@ -148,11 +147,11 @@
          <div class="col-xs-12 col-sm-4 col-md-4 mb16 mt16" style="
             float: left;
             ">
-            <a href="https://apps.odoo.com/apps/modules/13.0/amazon_ept/" target="_blank">
+            <a href="https://apps.odoo.com/apps/modules/12.0/amazon_vendor_central_ept/" target="_blank">
                <div style="box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);border-radius: 10px;">
-                  <img class="img img-responsive center-block" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Amazon-Odoo-Connector.jpg">
+                  <img class="img img-responsive center-block" style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Amazon-Vendor-Central-Integration.jpg">
                   <h4 class="mt0" style="padding:6% 4%;text-align: center;white-space: nowrap;width: 100%;overflow: hidden;text-overflow: ellipsis;font-family: Roboto-medium;">
-                     Amazon Odoo Connector
+                     Amazon Vendor Central Integration
                   </h4>
                </div>
             </a>
@@ -172,14 +171,24 @@
       </div>
    </div>
    <!-- Left and right controls -->
-   <a class="carousel-control-prev" href="#demo" data-slide="prev" style="margin-left: -30px;width: 35px;color: #000;">
-                                       <span class="carousel-control-prev-icon"><i class="fa fa-chevron-left" style="font-size:24px"></i></span>
-                                   </a>
-                                   <a class="carousel-control-next" href="#demo" data-slide="next" style="margin-right: -30px;width: 35px;color: #000;">
-                                       <span class="carousel-control-next-icon"><i class="fa fa-chevron-right" style="font-size:24px"></i></span>
-                                   </a>
+   <a class="carousel-control-prev" href="#demo" data-slide="prev" style="left:-25px;width: 35px;color: #000;">
+   <span class="carousel-control-prev-icon"><i class="fa fa-chevron-left" style="font-size:24px"></i></span>
+   </a>
+   <a class="carousel-control-next" href="#demo" data-slide="next" style="right:-25px;width: 35px;color: #000;">
+   <span class="carousel-control-next-icon"><i class="fa fa-chevron-right" style="font-size:24px"></i></span>
+   </a>
 </div>
 
+</section>
+
+
+
+<section class="container">
+    <div class="oe_row oe_spaced" style="width:100%;margin-top: 30px;">
+            <div class="contct_us_btn" style="padding:7px;margin: 0 auto;display: block;width: 20%;background-color: #087dda;text-align: center;">
+            	<a style="color:white;font-size:20px;" href="http://www.emiprotechnologies.com/odoo-apps-support" target="_blank">Get Support</a>
+            </div>
+    </div>
 </section>
 
 
